corrections sur les z-index
git-svn-id: svn+ssh://svn.projects.openwide.fr/svnroot/owsi-tools/trunk/owsi-core@2987 d3474844-eb8e-4abc-b058-2b321fed648b

--- a/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/bootstrap3/bootstrap/override/variables.less
+++ b/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/bootstrap3/bootstrap/override/variables.less
@@ -43,8 +43,8 @@
 @zindex-modal-background:		1020;
 @zindex-modal:					1029;
 @zindex-page-popover:			30;		// popover dans la page / donc sous la modale
-@zindex-alert-global:			1000;	// global floating alert panel
-@zindex-alert-global-close:		1001;	// global floating alert panel close button
+@zindex-alert-global:			1100;	// global floating alert panel
+@zindex-alert-global-close:		1101;	// global floating alert panel close button
 @zindex-scroll-to-top:			1035;
 @zindex-modal-date-picker:		300;	// TODO RJO : à revoir avec Bootstrap 3 / Note LAL : définir en fonction de zindex-modal ?
 
